Fixed many findbugs warnings.